fix: address CodeQL findings - log injection, deprecations, overrides, NFE, resources
- Log injection: sanitize request/response in AbstractTcpRestServer, TcpRestClientProxy, NettyTcpRestProtocolHandler (sanitizeForLog: strip CR/LF, truncate 500)
- Sensitive logs: FilePathClassLoader log class name only, not full path; remove useless buf null check
- ProtocolV2Codec: null check for paramStr before isEmpty(); NumberFormatException in convertToType; newInstance() -> getDeclaredConstructor().newInstance()
- ResourceResolver: newInstance() -> getDeclaredConstructor().newInstance()
- ProtocolV2Parser: wrap parseInt/parseDouble etc in try-catch NumberFormatException, rethrow as IllegalArgumentException
- Resource leaks: SingleThreadTcpRestServer per-request try/finally close writer+socket, rethrow IOException; DefaultTcpRestClient try-with-resources for writer/reader, finally close socket
- Context: fix @param converter -> codec
- Add @Override: AbstractTcpRestServer, SingleThreadTcpRestServer, NioTcpRestServer, NettyTcpRestServer, TcpRestClientProxy, DefaultTcpRestClient, FilePathClassLoader, TimeoutAnnotationHandler, RawTypeMapper, ExceptionMapper

Co-authored-by: Cursor <cursoragent@cursor.com>